# MetaStuff

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt
example/basic_json/: CMakeLists.txt  main.cpp
example/optional_variant_json/: CMakeLists.txt
